src/objects/Quote_Revision__c.object
<CustomObject>
    <description>Object used to track the Quote Revisions to support summaries for multi-year leases.</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offered_Price_Rate__c</fullName>
        <label>Offered Price Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote Revisions</relationshipLabel>
        <relationshipName>Quote_Revisions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Revision_Number__c</fullName>
        <label>Revision Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Best_Rate__c</fullName>
        <label>Total Best Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Offered_Price__c</fullName>
        <label>Total Offered Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Quote Revision</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REV-{000000}</displayFormat>
        <label>Quote Revision Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Revisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_update_when_qoute_under_approval</fullName>
        <active>false</active>
        <errorConditionFormula>OR(ISPICKVAL(Quote__r.Status ,&quot;Approved&quot;),
ISPICKVAL(Quote__r.Status ,&quot;Under Approval&quot;), 
ISPICKVAL(Quote__r.Status ,&quot;Synched&quot;), 
ISPICKVAL(Quote__r.Status ,&quot;Accepted&quot;))</errorConditionFormula>
        <errorMessage>Cannot update the payment schedules when quote is under DOA approval.</errorMessage>
    </validationRules>
</CustomObject>